fix(ziro): volume bar alignment with spotify connect (again)

--- a/Ziro/user.css
+++ b/Ziro/user.css
@@ -84,7 +84,7 @@
   left: 0;
   bottom: 84px;
 }
-.main-nowPlayingBar-nowPlayingBar:not(:only-child) .playback-progressbar:not(.volume-bar > .playback-progressbar) {
+.main-nowPlayingBar-nowPlayingBar:not(:only-child) .playback-progressbar:not(.volume-bar__slider-container > .playback-progressbar) {
   bottom: 108px;
 }
 .playback-bar {
